Wed Mar 25 17:03:08 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/-test-/file/fs.c (get_fsname): try magic number only if
	  f_type is included.  [ruby-dev:48913] [Bug #11000]

Wed Mar 25 11:20:40 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* benchmark/bm_hash_aref_flo.rb: make more realistic data.
	  [ruby-core:68632] [[Bug #10999]

Wed Mar 25 10:39:06 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* .document: removed needless entries.

Wed Mar 25 08:07:28 2015  Eric Wong  <e@80x24.org>

	* doc/extension.rdoc: fix spelling of filename
	* doc/extension.ja.rdoc: ditto.

Tue Mar 25 06:55:43 2015  Kazuki Tanaka  <gogotanaka@ruby-lang.org>

	* complex.c (k_inexact_p, k_exact_zero_p): use k_exact_zero_p macro
	  to remove k_inexact_p macro.

	* complex.c (k_exact_one_p): remove unused macro k_exact_one_p.

Tue Mar 24 22:23:33 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* doc/extention.rdoc: move from toplevel document and added extname.
	* doc/extention.ja.rdoc: ditto.

Tue Mar 24 22:06:58 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* doc/standard_library.rdoc: strip.

Tue Mar 24 22:06:27 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* doc/standard_library.rdoc: move Thread to Extentions.

Tue Mar 24 21:59:10 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* doc/contributing.rdoc: update Maintainers list.

Tue Mar 24 19:10:24 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_writebarrier_generational): fix messages for rb_bug().
	  Remove `rb_' prefix.

	* gc.c (gc_writebarrier_incremental): ditto.

Tue Mar 24 17:34:01 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* README.ja.md: should be chunibyo.

Tue Mar 24 17:30:12 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/-test-/file/fs.c (get_fsname): return filesystem name by
	  statfs/statvfs.  [ruby-core:68624] [Bug #10998]

Tue Mar 24 16:46:02 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/redmine-backporter.rb: now doesn't required spaces just after
	  `!`.
